# PromptVault

./: .gitignore  PROMPTVAULT_CLAUDE_CODE_PROMPT.md
promptvault/: ESTADO_PROYECTO.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
promptvault/src/: App.tsx  index.css
promptvault/src-tauri/: Cargo.toml  tauri.conf.json
promptvault/src-tauri/icons/: icon.icns
promptvault/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
promptvault/src/components/Gallery/: FilterTabs.tsx  GalleryGrid.tsx  PromptCard.tsx
promptvault/src/components/Inspector/: InspectorPanel.tsx
promptvault/src/components/Layout/: Header.tsx  Sidebar.tsx
promptvault/src/components/Modals/: NewPromptModal.tsx
promptvault/src/hooks/: useCollections.ts  usePrompts.ts
promptvault/src/types/: index.ts
